RESOLVED FIXED77808
[GTK] CurrentTime: Reorder headers for win32
https://bugs.webkit.org/show_bug.cgi?id=77808
Summary [GTK] CurrentTime: Reorder headers for win32
Kalev Lember
Reported 2012-02-04 03:25:03 PST
In GTK+ win32 port, monotonicallyIncreasingTime() implementation is based on g_get_monotonic_time(). Reorder headers to make sure glib.h gets included even when the platform is win32. CurrentTime.cpp: In function 'double WTF::monotonicallyIncreasingTime()': CurrentTime.cpp:321:53: error: 'g_get_monotonic_time' was not declared in this scope CurrentTime.cpp:322:1: warning: control reaches end of non-void function [-Wreturn-type]
Attachments
[GTK] CurrentTime: Reorder headers for win32 (2.40 KB, patch)
2012-02-04 03:26 PST, Kalev Lember
no flags
Kalev Lember
Comment 1 2012-02-04 03:26:31 PST
Created attachment 125489 [details] [GTK] CurrentTime: Reorder headers for win32
WebKit Review Bot
Comment 2 2012-02-04 14:44:53 PST
Comment on attachment 125489 [details] [GTK] CurrentTime: Reorder headers for win32 Clearing flags on attachment: 125489 Committed r106745: <http://trac.webkit.org/changeset/106745>
WebKit Review Bot
Comment 3 2012-02-04 14:44:57 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.