[GTK] CurrentTime: Reorder headers for win32 https://bugs.webkit.org/show_bug.cgi?id=77808

Patch by Kalev Lember <kalevlember@gmail.com> on 2012-02-04
Reviewed by Martin Robinson.

In GTK+ win32 port, monotonicallyIncreasingTime() implementation is
based on g_get_monotonic_time(). Reorder headers to make sure glib.h
gets included even when the platform is win32.

CurrentTime.cpp: In function 'double WTF::monotonicallyIncreasingTime()':
CurrentTime.cpp:321:53: error: 'g_get_monotonic_time' was not declared in this scope
CurrentTime.cpp:322:1: warning: control reaches end of non-void function [-Wreturn-type]

* wtf/CurrentTime.cpp:

Canonical link: https://commits.webkit.org/94680@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106745 268f45cc-cd09-0410-ab3c-d52691b4dbfc